# vs-mcp-server

./: .gitignore  CLAUDE.md  README.md  com_bridge.py  crash_logger.py  pyproject.toml  requirements.txt  server.py  session_manager.py  vs_instance_manager.py
.omc/: prd-integration.json  prd-mcp-registration.json  prd-pypi-packaging.json  prd-test.json  prd.json  progress.txt
tests/: test_com_bridge.py  test_config.py  test_crash_logger.py  test_integration_vs.py  test_rot.py  test_session_manager.py  test_tools_dte.py  test_tools_queue.py
tests/debug_target/: .gitignore  DebugTarget.sln  DebugTarget.slnx  Program.cs
tests/debug_target/.omc/state/: last-tool-error.json
tests/error_target/: ErrorTarget.sln  Program.cs
tools/: build.py  debug.py  editor.py  instance.py  queue.py
utils/: rot.py
vs_mcp_server/: __init__.py  __main__.py  com_bridge.py  config.py  crash_logger.py  server.py  session_manager.py  vs_instance_manager.py
vs_mcp_server/tools/: build.py  debug.py  dte.py  editor.py  instance.py  queue.py
vs_mcp_server/utils/: rot.py
